--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^4.0.2",
+    "prettier": "^2.2.1",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
@@ -50,7 +51,6 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "handlebars": "^4.7.6",
-    "prettier": "^2.2.1"
+    "handlebars": "^4.7.6"
   }
 }
